<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"

    android:orientation="vertical"
    tools:context=".SignUpActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/gift"
        android:padding="12dp"
        android:text="Vet Registration"
        android:textAlignment="center"
        android:textSize="20dp"
        android:textStyle="bold"
        android:textColor="#141F48"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/gift"
        android:padding="12dp"
        android:text="Please Register Vets Specialist Here"
        android:textSize="15dp"
        android:textStyle="bold"
        android:textColor="#141F48"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/FirstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/gift"
        android:textColor="@color/colorText"
        android:inputType="text"
        android:background="@color/colorTextBackground"
        android:hint="@string/First_Name"
        android:padding="12dp"
        />
    <EditText
        android:id="@+id/LastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/gift"
        android:textColor="@color/colorText"
        android:inputType="text"
        android:background="@color/colorTextBackground"
        android:hint="@string/Last_Name"
        android:padding="12dp"
        />
    <EditText
        android:id="@+id/VetType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/gift"
        android:textColor="@color/colorText"
        android:inputType="text"
        android:background="@color/colorTextBackground"
        android:hint="@string/Vet_Type"
        android:padding="12dp"
        />
    <EditText
        android:id="@+id/Email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/gift"
        android:textColor="@color/colorText"
        android:inputType="textEmailAddress"
        android:background="@color/colorTextBackground"
        android:hint="@string/email"
        android:padding="12dp"
        />
    <EditText
        android:id="@+id/Password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/gift"
        android:textColor="@color/colorText"
        android:inputType="textPassword"
        android:background="@color/colorTextBackground"
        android:hint="@string/Password"
        android:padding="12dp"
        />



    <Button
        android:id="@+id/btnRegisterVet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:fontFamily="@font/gift"
        android:backgroundTint="#265AA9"
        android:textColor="@color/colorAccent"
        android:textSize="15dp"
        android:text="@string/btn_registerVets"/>

</LinearLayout>




