<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".SignUpActivity">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/gift"
        android:padding="12dp"
        android:text="Client  And   Vet Login"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/gift"
        android:textColor="@color/colorText"
        android:inputType="textEmailAddress"
        android:background="@color/colorTextBackground"
        android:hint="@string/enter_email"
        android:padding="12dp"
        />
    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/gift"
        android:textColor="@color/colorText"
        android:inputType="textPassword"
        android:background="@color/colorTextBackground"
        android:hint="@string/enter_password"
        android:padding="12dp"
        />




        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:fontFamily="@font/gift"
            android:background="@color/design_default_color_primary"
            android:textColor="@color/colorAccent"
            android:text="@string/btn_login"/>

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:fontFamily="@font/gift"
        android:background="@color/colorDarkGray"
        android:textColor="@color/colorAccent"
        android:text="@string/btn_sign_up"/>

    </LinearLayout>




